# nixos-bazel-userenv-example

./: .gitignore  README.md
devshell/: BUILD.bazel  README.md
devshell/proto/: BUILD.bazel  example.proto
lorri/: BUILD.bazel  README.md  shell.nix
lorri/proto/: BUILD.bazel  example.proto
nix-shell/: BUILD.bazel  README.md  WORKSPACE  shell.nix
nix-shell/proto/: BUILD.bazel  example.proto
