load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/dmayle/nixos-bazel-userenv-example/devshell/proto
gazelle(name = "gazelle")

proto_library(
    name = "example_proto",
    srcs = [
        "example.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "example_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/dmayle/nixos-bazel-userenv-example/devshell/proto",
    proto = ":example_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":example_go_proto"],
    importpath = "github.com/dmayle/nixos-bazel-userenv-example/devshell/proto",
    visibility = ["//visibility:public"],
)
